--- a/cherry_leaflet.html
+++ b/cherry_leaflet.html
@@ -11,7 +11,7 @@ h+drA=="
 QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw
 5lwrg=="
  crossorigin=""></script>
- <script src = "/Users/megbvh/Desktop/GEOG_456/leaflet/leaflet_tutorial/data/old_well_4326.geojson"></script>
+ <script src = "data/old_well_4326.geojson"></script>
     </head>
     <body>
         This is not as hard as I thought.
