updated_well_icon

--- a/cherry_leaflet.html
+++ b/cherry_leaflet.html
@@ -30,7 +30,7 @@ QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Q
         .openPopup();
         L.geoJSON(uncwell).addTo(map)
         var uncIcon = L.icon({ // notice the L.icon which is a Leaflet object with properties
-        iconUrl: 'https://identity.unc.edu/files/2014/01/Old_Well_Graphic_twitter.jpg',
+        iconUrl: 'data/old_well.png',
         // this points to a jpg image obtained from the internet
         iconSize: [50,50], // size of the icon
         popupAnchor: [0,0] // where the icon is located relative to the lat lon of the point.
