--- a/cherry_leaflet.html
+++ b/cherry_leaflet.html
@@ -11,7 +11,7 @@ h+drA=="
 QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw
 5lwrg=="
  crossorigin=""></script>
- <script src = "data/old_well_4326.geojson"></script>
+ <script src = "data/flowering_cherries_4326.geojson"></script>
     </head>
     <body>
         This is not as hard as I thought.
@@ -25,22 +25,22 @@ QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Q
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a> href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
-        L.marker([35.911271, -79.049807]).addTo(map)
-        .bindPopup('HELLO I am at the coolest classroom on campus, Carolina Hall 322')
-        .openPopup();
-        L.geoJSON(uncwell).addTo(map)
+        // L.marker([35.911271, -79.049807]).addTo(map)
+        // .bindPopup('HELLO I am at the coolest classroom on campus, Carolina Hall 322')
+        // .openPopup();
+        L.geoJSON(unccherry).addTo(map)
         var uncIcon = L.icon({ // notice the L.icon which is a Leaflet object with properties
-        iconUrl: 'data/old_well.png',
+        iconUrl: 'data/cherry_tree.png',
         // this points to a jpg image obtained from the internet
         iconSize: [50,50], // size of the icon
         popupAnchor: [0,0] // where the icon is located relative to the lat lon of the point.
         });
         //YOU COULD CHANGE the iconURL, iconSize and popupAnchor to see how the map changes
         // create an HTML variable that will pop up with a UNC Well photo
-        var customPopup = "UNC Well<br/><img src='https://static1.squarespace.com/static/57d17e77b8a79bfa4e31641d/t/58a22fd0bebafb516ad2404a/1487024089479/unc+well.png?format=1500w' width='100px'/>";
+        var customPopup = "UNC Cherry<br/><img src='https://https://www.pngitem.com/middle/hJoTxb_transparent-cherry-blossom-png-cherry-blossom-tree-png/' width='75px'/>";
         // YOU COULD CHANGE the https link to another picture.
         // YOU COULD CHANGE the 100px to other values like 50px or 400px to see what happens
-        L.geoJSON(uncwell, {
+        L.geoJSON(unccherry, {
         pointToLayer: function (feature, latlng) {
         return L.marker(latlng, {icon: uncIcon});}})
         .bindPopup(customPopup)
