--- a/cherry_leaflet.html
+++ b/cherry_leaflet.html
@@ -14,7 +14,7 @@ QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Q
  <script src = "data/flowering_cherries_4326.geojson"></script>
     </head>
     <body>
-        This is not as hard as I thought.
+        Flowering Cherries at UNC.
     </body>
     <div id="mapid"></div>
     <style>
