--- a/cherry_leaflet.html
+++ b/cherry_leaflet.html
@@ -28,16 +28,16 @@ QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Q
         // L.marker([35.911271, -79.049807]).addTo(map)
         // .bindPopup('HELLO I am at the coolest classroom on campus, Carolina Hall 322')
         // .openPopup();
-        L.geoJSON(unccherry).addTo(map)
+        // L.geoJSON(unccherry).addTo(map)
         var uncIcon = L.icon({ // notice the L.icon which is a Leaflet object with properties
-        iconUrl: 'data/cherry_tree3.png',
+        iconUrl: 'data/cherry_tree5.png',
         // this points to a jpg image obtained from the internet
         iconSize: [50,50], // size of the icon
         popupAnchor: [0,0] // where the icon is located relative to the lat lon of the point.
         });
         //YOU COULD CHANGE the iconURL, iconSize and popupAnchor to see how the map changes
         // create an HTML variable that will pop up with a UNC Well photo
-        var customPopup = "UNC Cherry<br/><img src='https://toppng.com/cherry-blossom-tree-cherry-blossom-drawing-cherry-tree-with-pink-flowers-drawi-PNG-free-PNG-Images_166456?search-result=autumn-tree-vector' width='75px'/>";
+        var customPopup = "UNC Cherry<br/><img src='http://clipartmag.com/japanese-cherry-blossom-flower-drawing' width='75px'/>";
         // YOU COULD CHANGE the https link to another picture.
         // YOU COULD CHANGE the 100px to other values like 50px or 400px to see what happens
         L.geoJSON(unccherry, {
